--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
@@ -1,3 +1,12 @@
 {
+  "lang.choose": "Choose language",
+  "lang.choose.placeholder": "Please select language",
+
+  "service.tab.publish.service": "Publish service",
+  "service.tab.publish.setting": "Publish setting",
+  "service.tab.post.bind": "Post bind",
+  "service.tab.service.switch": "Service switch",
+  "service.tab.change.local": "Change language",
+
   "use.google.translate": "Use Google translate API"
 }
