--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
@@ -1,12 +1,54 @@
 {
   "lang.choose": "Choose language",
   "lang.choose.placeholder": "Please select language",
-
   "service.tab.publish.service": "Publish service",
   "service.tab.publish.setting": "Publish setting",
   "service.tab.post.bind": "Post bind",
   "service.tab.service.switch": "Service switch",
   "service.tab.change.local": "Change language",
-
-  "use.google.translate": "Use Google translate API"
+  "main.publish.to.vuepress": "Send to Vuepress",
+  "main.slug": "Post slug",
+  "main.auto.fetch.slug": "Auto fetch slug",
+  "main.use.google.translate": "Use Google translate API",
+  "main.desc": "Post desc",
+  "main.auto.fetch.desc": "Auto fetch desc",
+  "main.create.time": "Publish time",
+  "main.create.time.placeholder": "Please select time",
+  "main.tag": "Post tag",
+  "main.auto.fetch.tag": "Auto fetch tag",
+  "main.publish": "Publish",
+  "main.cancel": "Cancel",
+  "main.publish.status.unpublish": "Unpublish",
+  "main.publish.to.jvue": "Send to JVue",
+  "main.publish.to.conf": "Send to Confluence",
+  "main.publish.to.cnblogs": "Send to Cnblogs",
+  "setting.vuepress": "Vuepress",
+  "setting.blog.type": "Blog type",
+  "setting.blog.type.placeholder": "Please select type",
+  "setting.blog.type.wordpress.value": "Wordpress",
+  "setting.blog.type.wordpress.label": "Wordpress",
+  "setting.blog.type.metaweblog.value": "MetaweblogApi",
+  "setting.blog.type.metaweblog.label": "Metaweblog API",
+  "setting.blog.type.vuepress.value": "Vuepress",
+  "setting.blog.type.vuepress.label": "Vuepress",
+  "setting.blog.url": "Blog addr",
+  "setting.blog.username": "Username",
+  "setting.blog.password": "Password",
+  "setting.blog.apiurl": "API Url",
+  "setting.blog.validate": "Validate",
+  "setting.blog.save": "Save",
+  "setting.blog.cancel": "Cancel",
+  "setting.jvue": "JVue",
+  "setting.conf": "Confluence",
+  "setting.cnblogs": "Cnblogs",
+  "service.switch.vuepress": "Vuepress",
+  "service.switch.jvue": "JVue",
+  "service.switch.conf": "Confluence",
+  "service.switch.cnblogs": "Cnblogs",
+  "post.bind.vuepress.slug": "Vuepress slug",
+  "post.bind.cnblogs.postid": "Cnblogs ID",
+  "post.bind.jvue.postid": "JVue ID",
+  "post.bind.conf.postid": "Conf ID",
+  "post.bind.conf.save": "Save",
+  "post.bind.conf.cancel": "Cancel"
 }
