:art: 备份本地笔记

--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
@@ -16,6 +16,10 @@
   "main.create.time.placeholder": "Please select time",
   "main.tag": "Post tag",
   "main.auto.fetch.tag": "Auto fetch tag",
+  "main.yaml.formatter": "YAML Formatter",
+  "main.siyuan.to.yaml": "Siyuan attr to YAML",
+  "main.yaml.to.siyuan": "YAML to Siyuan attr",
+  "main.copy": "Copy",
   "main.publish": "Publish",
   "main.cancel": "Cancel",
   "main.publish.status.unpublish": "Unpublish",
@@ -41,6 +45,7 @@
   "setting.jvue": "JVue",
   "setting.conf": "Confluence",
   "setting.cnblogs": "Cnblogs",
+  "setting.other1": "Other1",
   "service.switch.vuepress": "Vuepress",
   "service.switch.jvue": "JVue",
   "service.switch.conf": "Confluence",
