--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
@@ -16,6 +16,10 @@
   "main.create.time.placeholder": "请选择发布时间",
   "main.tag": "文章标签",
   "main.auto.fetch.tag": "自动提取标签",
+  "main.yaml.formatter": "YAML Formatter",
+  "main.siyuan.to.yaml": "思源属性转YAML",
+  "main.yaml.to.siyuan": "YAML转思源属性",
+  "main.copy": "复制",
   "main.publish": "发布",
   "main.cancel": "取消",
   "main.publish.status.unpublish": "未发布",
@@ -41,6 +45,7 @@
   "setting.jvue": "JVue",
   "setting.conf": "Confluence",
   "setting.cnblogs": "博客园",
+  "setting.other1": "其他1",
   "service.switch.vuepress": "Vuepress",
   "service.switch.jvue": "JVue",
   "service.switch.conf": "Confluence",
