--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
@@ -19,6 +19,7 @@
   "main.yaml.formatter": "YAML Formatter",
   "main.siyuan.to.yaml": "思源属性转YAML",
   "main.yaml.to.siyuan": "YAML转思源属性",
+  "main.save.attr.to.siyuan": "保存属性到思源",
   "main.copy": "复制",
   "main.publish": "发布",
   "main.cancel": "取消",
