:art: 备份本地笔记

--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
@@ -7,6 +7,7 @@
   "service.tab.service.switch": "Service switch",
   "service.tab.change.local": "Change language",
   "main.publish.to.vuepress": "Send to Vuepress",
+  "main.publish.to.wordpress": "Send to Wordpress",
   "main.slug": "Post slug",
   "main.auto.fetch.slug": "Auto fetch slug",
   "main.use.google.translate": "Use Google translate API",
@@ -48,6 +49,7 @@
   "setting.jvue": "JVue",
   "setting.conf": "Confluence",
   "setting.cnblogs": "Cnblogs",
+  "setting.wordpress": "Wordpress",
   "setting.other1": "Other1",
   "service.switch.vuepress": "Vuepress",
   "service.switch.jvue": "JVue",
