--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
@@ -7,6 +7,7 @@
   "service.tab.service.switch": "服务开关",
   "service.tab.change.local": "语言设置",
   "main.publish.to.vuepress": "发布到Vuepress",
+  "main.publish.to.wordpress": "发布到Wordpress",
   "main.slug": "文章别名",
   "main.auto.fetch.slug": "自动生成别名",
   "main.use.google.translate": "使用Google翻译API",
@@ -48,6 +49,7 @@
   "setting.jvue": "JVue",
   "setting.conf": "Confluence",
   "setting.cnblogs": "博客园",
+  "setting.wordpress": "Wordpress",
   "setting.other1": "其他1",
   "service.switch.vuepress": "Vuepress",
   "service.switch.jvue": "JVue",
