:art: 备份本地笔记

--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/en_US.json
@@ -23,8 +23,10 @@
   "main.save.attr.to.siyuan": "Save attr to Siyuan",
   "main.copy": "Copy",
   "main.publish": "Publish",
+  "main.update": "Update",
   "main.cancel": "Cancel",
   "main.publish.status.unpublish": "Unpublish",
+  "main.publish.status.published": "Published",
   "main.publish.to.jvue": "Send to JVue",
   "main.publish.to.conf": "Send to Confluence",
   "main.publish.to.cnblogs": "Send to Cnblogs",
