--- a/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
+++ b/workspace/SiYuan/data/widgets/publisher/src/publisher/src/locales/zh_CN.json
@@ -23,8 +23,10 @@
   "main.save.attr.to.siyuan": "保存属性到思源",
   "main.copy": "复制",
   "main.publish": "发布",
+  "main.update": "更新",
   "main.cancel": "取消",
   "main.publish.status.unpublish": "未发布",
+  "main.publish.status.published": "已发布",
   "main.publish.to.jvue": "发布到JVue",
   "main.publish.to.conf": "发布到Confluence",
   "main.publish.to.cnblogs": "发布到博客园",
