:art: 备份本地笔记

--- a/workspace/SiYuan/conf/appearance/langs/en_US.json
+++ b/workspace/SiYuan/conf/appearance/langs/en_US.json
@@ -1,4 +1,5 @@
 {
+  "compare": "Compare",
   "switchTab": "Switcher",
   "recentDocs": "Recently opened documents",
   "autoLaunch": "Automatic launch at boot",
@@ -37,8 +38,6 @@
   "floatWindowMode": "Hover to display a floating window",
   "floatWindowModeTip": "After enabling, a floating window will appear when the mouse hovers over the block reference, breadcrumb block icon, etc. After disabling, you need to hold down the <code class='fn__code'>${hotkey}</code> key to appear the floating window",
   "codeSnippet": "Code Snippet",
-  "useFixedPort": "Use Fixed Port",
-  "useFixedPortTip": "After enabling, only the port <code class='fn__code'>6806</code> will be used. When disabled, both random ports and <code class='fn__code'>6806</code> will be used. The application will be closed automatically after modification, please restart manually",
   "expandDown": "Expand Down",
   "expandUp": "Expand Up",
   "goForward": "Go forward",
@@ -193,21 +192,21 @@
   "networkProxy": "Network Proxy",
   "copyAnnotation": "Copy Annotation",
   "rectAnnotation": "Rectangular Annotation",
-  "fileName": "File name:",
-  "fileSize": "File size:",
-  "fileCount": "File count:",
-  "title1": "Title:",
-  "author": "Author:",
-  "subject": "Subject:",
-  "keywords": "Keywords:",
-  "creationDate": "Creation Date:",
-  "modificationDate": "Modification Date:",
-  "creator": "Creator:",
-  "producer": "Producer:",
-  "version": "Version:",
-  "pageCount": "Page Count:",
-  "pageSize": "Page Size:",
-  "linearized": "Fast Web View:",
+  "fileName": "File name",
+  "fileSize": "File size",
+  "fileCount": "File count",
+  "title1": "Title",
+  "author": "Author",
+  "subject": "Subject",
+  "keywords": "Keywords",
+  "creationDate": "Creation Date",
+  "modificationDate": "Modification Date",
+  "creator": "Creator",
+  "producer": "Producer",
+  "version": "Version",
+  "pageCount": "Page Count",
+  "pageSize": "Page Size",
+  "linearized": "Fast Web View",
   "firstPage": "Go to First Page",
   "lastPage": "Go to Last Page",
   "rotateCw": "Rotate Clockwise",
@@ -463,7 +462,7 @@
   "exporting": "Exporting, please wait...",
   "exported": "Export complete",
   "refExpired": "Search content block does not exist",
-  "emptyContent": "No related content",
+  "emptyContent": "No related content found",
   "useBrowserView": "View in the browser",
   "userLocalPDF": "Open with local PDF tool",
   "copyID": "Copy ID",
@@ -611,7 +610,7 @@
   "max": "Max",
   "md2": "Code block ligature",
   "md3": "After enabling, the code block will display the ligature",
-  "md4": "Automatically indent the beginning of paragraphs to conform to traditional Chinese typesetting habits",
+  "md4": "After enabling, automatically indent the beginning of paragraphs to conform to traditional Chinese typesetting habits",
   "md7": "Whether to display the network picture corner mark",
   "md8": "After enabling, if the picture is a web file (non-local asset file), it will display a corner mark",
   "md9": "Virtual Reference keyword inclusion list",
@@ -657,9 +656,11 @@
   "export15": "Label Package Symbol",
   "export16": "Please fill in the symbol on the left side of the tag and the symbol on the right side of the tag in the input box in turn",
   "export17": "Add document title",
-  "export18": "Insert document title as a heading 1 at the beginning",
+  "export18": "After enabling, insert the document title as a heading 1 at the beginning",
   "export19": "Path to Pandoc executable",
   "export20": "Exporting Word .docx files requires format conversion using <a href=\"https://pandoc.org\" target=\"_blank\">Pandoc</a>",
+  "export21": "Export PDF with footer",
+  "export22": "After enabling, add <code class='fn__code'>Export by SiYuan</code> at the footer of the exported PDF",
   "blockRef": "Ref Block",
   "theme11": "Use theme in light mode",
   "theme12": "Use theme in dark mode",
@@ -843,6 +844,16 @@
     "xy": "%d years %s",
     "max": "a long while %s"
   },
+  "_trayMenu": {
+    "showWindow": "Show Window",
+    "hideWindow": "Hide Window",
+    "setWindowTop": "Set Window top",
+    "cancelWindowTop": "Cancel Window top",
+    "officialWebsite": "Visit official website",
+    "openSource": "Visit project on GitHub",
+    "resetWindow": "Reset window and quit the program",
+    "quit": "Quit application"
+  },
   "_kernel": {
     "0": "Query notebook failed",
     "1": "Duplicated filename",
@@ -1022,6 +1033,7 @@
     "175": "Please enter the verification code",
     "176": "SiYuan",
     "177": "Exit application",
-    "178": "Access Authorization - SiYuan"
+    "178": "Access Authorization - SiYuan",
+    "179": "The disk space may be insufficient. It is recommended to keep the free space of the disk where the workspace is located at more than twice the size of data"
   }
 }
