--- a/workspace/SiYuan/conf/appearance/langs/es_ES.json
+++ b/workspace/SiYuan/conf/appearance/langs/es_ES.json
@@ -1,4 +1,5 @@
 {
+  "comparar": "Comparar",
   "switchTab": "Conmutador",
   "recentDocs": "Documentos abiertos recientemente",
   "autoLaunch": "Inicio automático al arrancar",
@@ -37,8 +38,6 @@
   "floatWindowMode": "Pase el cursor para mostrar una ventana flotante",
   "floatWindowModeTip": "Después de habilitar, aparecerá una ventana flotante cuando el mouse se desplace sobre la referencia del bloque, el ícono del bloque de navegación, etc. Después de deshabilitar, debe mantener presionada la tecla <code class='fn__code'>${hotkey}</code> para aparece la ventana flotante",
   "codeSnippet": "Fragmento de código",
-  "useFixedPort": "Usar puerto fijo",
-  "useFixedPortTip": "Después de habilitarlo, solo se usará el puerto <code class='fn__code'>6806</code>. Cuando está deshabilitado, se utilizarán tanto los puertos aleatorios como <code class='fn__code'>6806</code>. La aplicación se cerrará automáticamente después de la modificación, por favor reinicie manualmente",
   "expandDown": "Expandir hacia abajo",
   "expandUp": "Expandir hacia arriba",
   "goForward": "Ir hacia adelante",
@@ -193,21 +192,21 @@
   "networkProxy": "Proxy de red",
   "copyAnnotation": "Copiar anotación",
   "rectAnnotation": "Anotación rectangular",
-  "fileName": "Nombre del archivo:",
-  "fileSize": "Tamaño del archivo:",
-  "fileCount": "Cantidad de archivos:",
-  "title1": "Título:",
-  "author": "Autor:",
-  "subject": "Asunto:",
-  "keywords": "Palabras clave:",
-  "creationDate": "Fecha de creación:",
-  "modificationDate": "Fecha de modificación:",
-  "creator": "Creador:",
-  "producer": "Productor:",
-  "version": "Versión:",
-  "pageCount": "Recuento de páginas:",
-  "pageSize": "Tamaño de página:",
-  "linearized": "Vista rápida de la web:",
+  "fileName": "Nombre del archivo",
+  "fileSize": "Tamaño del archivo",
+  "fileCount": "Cantidad de archivos",
+  "title1": "Título",
+  "author": "Autor",
+  "subject": "Asunto",
+  "keywords": "Palabras clave",
+  "creationDate": "Fecha de creación",
+  "modificationDate": "Fecha de modificación",
+  "creator": "Creador",
+  "producer": "Productor",
+  "version": "Versión",
+  "pageCount": "Recuento de páginas",
+  "pageSize": "Tamaño de página",
+  "linearized": "Vista rápida de la web",
   "firstPage": "Ir a la primera página",
   "lastPage": "Ir a la última página",
   "rotateCw": "Rotar en el sentido de las agujas del reloj",
@@ -463,7 +462,7 @@
   "exporting": "Exportando, por favor espere...",
   "exported": "Exportación completada",
   "refExpired": "El bloque de contenido de búsqueda no existe",
-  "emptyContent": "No hay contenido relacionado",
+  "emptyContent": "No se encontró contenido relacionado",
   "useBrowserView": "Ver en el navegador",
   "userLocalPDF": "Abrir con la herramienta local de PDF",
   "copyID": "ID de copia",
@@ -611,7 +610,7 @@
   "max": "Maximizar",
   "md2": "Ligadura de bloque de código",
   "md3": "Tras la habilitación, el bloque de código mostrará la ligadura",
-  "md4": "Sangria automáticamente el comienzo de los párrafos para ajustarse a los hábitos tipográficos tradicionales chinos",
+  "md4": "Después de habilitar, sangrar automáticamente el comienzo de los párrafos para ajustarse a los hábitos de composición tipográfica chinos tradicionales",
   "md7": "Mostrar la marca de esquina de la imagen de red",
   "md8": "Después de habilitarlo, si la imagen es un archivo de red (archivo de activos no locales), mostrará una marca de esquina",
   "md9": "Lista de inclusión de palabras clave de referencia virtual",
@@ -657,9 +656,11 @@
   "export15": "Símbolo del paquete de la etiqueta",
   "export16": "Por favor, rellene el símbolo del lado izquierdo de la etiqueta y el símbolo del lado derecho de la etiqueta en el cuadro de entrada por turnos",
   "export17": "Añadir título del documento",
-  "export18": "Insertar el título del documento como título 1 al principio",
+  "export18": "Después de habilitar, inserte el título del documento como encabezado 1 al principio",
   "export19": "Ruta de acceso al ejecutable de Pandoc",
   "export20": "La exportación de archivos Word .docx requiere la conversión del formato mediante <a href=\"https://pandoc.org\" target=\"_blank\">Pandoc</a>",
+  "export21": "Exportar PDF con pie de página",
+  "export22": "Después de habilitar, agregue <code class='fn__code'>Exportar por SiYuan</code> al pie de página del PDF exportado",
   "blockRef": "Bloque de referencia",
   "theme11": "Usar tema en modo claro",
   "theme12": "Usar tema en modo oscuro",
@@ -677,7 +678,6 @@
   "export3": "Sólo texto de anclaje",
   "export4": "Notas a pie de página",
   "export5": "Ref. de anotación en PDF",
-  "export6": "Fusionar subdocumentos",
   "export6": "Sobre el manejo del texto ancla en las anotaciones PDF al exportar",
   "export7": "Nombre de archivo - Número de página - Texto ancla",
   "export8": "Sólo texto ancla",
@@ -843,6 +843,16 @@
     "2y": "2 años %s",
     "xy": "%d años %s",
     "max": "mucho tiempo %s"
+  },
+  "_trayMenu": {
+    "showWindow": "Mostrar ventana",
+    "hideWindow": "Ocultar ventana",
+    "setWindowTop": "Establecer parte superior de la ventana",
+    "cancelWindowTop": "Cancelar ventana superior",
+    "officialWebsite": "Visita el sitio web oficial",
+    "openSource": "Visita el proyecto en GitHub",
+    "resetWindow": "Restablecer ventana y salir del programa",
+    "quit": "Salir de la aplicación"
   },
   "_kernel": {
     "0": "Consulta al cuaderno de notas fallido",
@@ -1023,6 +1033,7 @@
     "175": "Por favor ingrese el código de verificación",
     "176": "SiYuan",
     "177": "Salir de la aplicación",
-    "178": "Autorización de acceso - SiYuan"
+    "178": "Autorización de acceso - SiYuan",
+    "179": "El espacio en disco puede ser insuficiente. Se recomienda mantener el espacio libre del disco donde se encuentra el espacio de trabajo en más del doble del tamaño de los datos"
   }
 }
