--- a/workspace/SiYuan/conf/appearance/langs/fr_FR.json
+++ b/workspace/SiYuan/conf/appearance/langs/fr_FR.json
@@ -1,4 +1,5 @@
 {
+  "comparer": "Comparer",
   "switchTab": "Commutateur",
   "recentDocs": "Documents récemment ouverts",
   "autoLaunch": "Lancement automatique au démarrage",
@@ -37,8 +38,6 @@
   "floatWindowMode": "Survolez pour afficher une fenêtre flottante",
   "floatWindowModeTip": "Après l'activation, une fenêtre flottante apparaît lorsque la souris survole la référence du bloc, l'icône du fil d'Ariane, etc. Après la désactivation, vous devez maintenir enfoncée la touche <code class='fn__code'>${hotkey}</code> pour apparaît la fenêtre flottante",
   "codeSnippet": "Extrait de code",
-  "useFixedPort": "Utiliser un port fixe",
-  "useFixedPortTip": "Après activation, seul le port <code class='fn__code'>6806</code> sera utilisé. Lorsqu'il est désactivé, les ports aléatoires et <code class='fn__code'>6806</code> seront utilisés. L'application sera fermée automatiquement après modification, veuillez la redémarrer manuellement.",
   "expandDown": "Développer vers le bas",
   "expandUp": "Développer vers le haut",
   "goForward": "Suivant",
@@ -193,21 +192,21 @@
   "networkProxy": "Proxy réseau",
   "copyAnnotation": "Copier l'annotation",
   "rectAnnotation": "Annotation rectangulaire",
-  "fileName": "Nom du fichier :",
-  "fileSize": "Taille du fichier :",
-  "fileCount": "Nombre de fichiers :",
-  "title1": "Titre :",
-  "author": "Auteur :",
-  "subject": "Sujet :",
-  "keywords": "Mots-clés :",
-  "creationDate": "Date de création :",
-  "modificationDate": "Modifié le :",
-  "creator": "Créé par :",
-  "producer": "Outil de conversion :",
-  "version": "Version :",
-  "pageCount": "Nombre de pages :",
-  "pageSize": "Taille de la page :",
-  "linearized": "Affichage rapide des pages web :",
+  "fileName": "Nom du fichier",
+  "fileSize": "Taille du fichier",
+  "fileCount": "Nombre de fichiers",
+  "title1": "Titre",
+  "author": "Auteur",
+  "subject": "Sujet",
+  "keywords": "Mots-clés",
+  "creationDate": "Date de création",
+  "modificationDate": "Modifié le",
+  "creator": "Créé par",
+  "producer": "Outil de conversion",
+  "version": "Version",
+  "pageCount": "Nombre de pages",
+  "pageSize": "Taille de la page",
+  "linearized": "Affichage rapide des pages web",
   "firstPage": "Aller à la première page",
   "lastPage": "Aller à la dernière page",
   "rotateCw": "Rotation horaire",
@@ -463,7 +462,7 @@
   "exporting": "En cours d'exportation, veuillez patienter...",
   "exported": "Exportation terminée",
   "refExpired": "Le bloc de contenu de recherche n'existe pas",
-  "emptyContent": "Aucun contenu pertinent pour le moment",
+  "emptyContent": "Aucun contenu connexe trouvé",
   "useBrowserView": "Afficher dans le navigateur",
   "userLocalPDF": "Ouvrir avec un outil PDF local",
   "copyID": "Copie ID",
@@ -611,7 +610,7 @@
   "max": "Max",
   "md2": "Ligature du bloc de codes",
   "md3": "Après l'activation, le bloc de code affichera la ligature",
-  "md4": "indenter automatiquement le début des paragraphes pour se conformer aux habitudes de composition traditionnelles chinoises.",
+  "md4": "Après l'activation, indentez automatiquement le début des paragraphes pour se conformer aux habitudes de composition chinoises traditionnelles",
   "md7": "Affichage ou non de la marque d'angle de l'image réseau",
   "md8": "Après l'activation, si l'image est un fichier web (fichier d'actif non local), une marque d'angle apparaîtra.",
   "md9": "Liste d'inclusion de mots-clés de référence virtuelle",
@@ -657,9 +656,11 @@
   "export15": "Étiquette Symbole de l'emballage",
   "export16": "Veuillez remplir successivement le symbole figurant à gauche de l'étiquette et le symbole figurant à droite de l'étiquette dans le champ de saisie.",
   "export17": "Ajouter le titre du document",
-  "export18": "Insérer le titre du document comme titre de premier niveau au début",
+  "export18": "Après activation, insérez le titre du document comme titre 1 au début",
   "export19": "Chemin vers l'exécutable Pandoc",
   "export20": "L'exportation de fichiers Word .docx nécessite une conversion de format à l'aide de <a href=\"https://pandoc.org\" target=\"_blank\">Pandoc</a>",
+  "export21": "Exporter un PDF avec pied de page",
+  "export22": "Après l'activation, ajoutez <code class='fn__code'>Exporter par SiYuan</code> au pied de page du PDF exporté",
   "blockRef": "Bloc Réf",
   "theme11": "Utiliser le thème en mode Clair",
   "theme12": "Utiliser le thème en mode sombre",
@@ -843,6 +844,16 @@
     "xy": "%d ans %s",
     "max": "un bon moment %s"
   },
+  "_trayMenu": {
+    "showWindow": "Afficher la fenêtre principale",
+    "hideWindow": "Masquer la fenêtre principale",
+    "setWindowTop": "Fenêtre en haut",
+    "cancelWindowTop": "Annuler le haut de la fenêtre",
+    "officialWebsite": "Visiter le site officiel",
+    "openSource": "Visitez le projet sur GitHub",
+    "resetWindow": "Réinitialiser la fenêtre et quitter le programme",
+    "quit": "Quitter le programme"
+  },
   "_kernel": {
     "0": "Échec du cahier de requêtes",
     "1": "Nom de fichier dupliqué",
@@ -1022,6 +1033,7 @@
     "175": "Veuillez entrer le code de vérification",
     "176": "SiYuan",
     "177": "Quitter l'application",
-    "178": "Autorisation d'accès - SiYuan"
+    "178": "Autorisation d'accès - SiYuan",
+    "179": "L'espace disque peut être insuffisant. Il est recommandé de conserver l'espace libre du disque où se trouve l'espace de travail à plus de deux fois la taille des données"
   }
 }
