--- a/workspace/SiYuan/conf/appearance/langs/zh_CN.json
+++ b/workspace/SiYuan/conf/appearance/langs/zh_CN.json
@@ -1,4 +1,5 @@
 {
+  "compare": "比较",
   "switchTab": "页签切换",
   "recentDocs": "最近打开的文档",
   "autoLaunch": "开机自动启动",
@@ -13,8 +14,8 @@
   "leftRightLayout": "左右布局",
   "topBottomLayout": "上下布局",
   "keyword": "关键字",
-  "searchMethod":"搜索方式",
-  "regex":"正则表达式",
+  "searchMethod": "搜索方式",
+  "regex": "正则表达式",
   "keywordsLimit": "关键字数量限制",
   "exportAsImage": "导出为图片",
   "exportBySiYuan": "由思源笔记导出",
@@ -37,8 +38,6 @@
   "floatWindowMode": "悬停出现浮窗",
   "floatWindowModeTip": "启用后鼠标悬停块引、面包屑块标等位置会出现浮窗，关闭后需按住 <code class='fn__code'>${hotkey}</code> 键才会出现浮窗",
   "codeSnippet": "代码片段",
-  "useFixedPort": "使用固定端口",
-  "useFixedPortTip": "启用后将仅使用固定端口 <code class='fn__code'>6806</code>，关闭时同时使用随机端口和 <code class='fn__code'>6806</code>。修改后会自动关闭应用，请手动重启",
   "expandDown": "向下扩选",
   "expandUp": "向上扩选",
   "goForward": "前进",
@@ -193,21 +192,21 @@
   "networkProxy": "网络代理",
   "copyAnnotation": "复制标注",
   "rectAnnotation": "矩形标注",
-  "fileName": "文件名：",
-  "fileSize": "文件大小：",
-  "fileCount": "文件数量：",
-  "title1": "标题：",
-  "author": "作者：",
-  "subject": "主题：",
-  "keywords": "关键词：",
-  "creationDate": "创建日期：",
-  "modificationDate": "修改日期：",
-  "creator": "创建者：",
-  "producer": "生成器：",
-  "version": "版本：",
-  "pageCount": "页数：",
-  "pageSize": "页面大小：",
-  "linearized": "快速 Web 视图：",
+  "fileName": "文件名",
+  "fileSize": "文件大小",
+  "fileCount": "文件数量",
+  "title1": "标题",
+  "author": "作者",
+  "subject": "主题",
+  "keywords": "关键词",
+  "creationDate": "创建日期",
+  "modificationDate": "修改日期",
+  "creator": "创建者",
+  "producer": "生成器",
+  "version": "版本",
+  "pageCount": "页数",
+  "pageSize": "页面大小",
+  "linearized": "快速 Web 视图",
   "firstPage": "转到第一页",
   "lastPage": "转到最后一页",
   "rotateCw": "顺时针旋转",
@@ -463,7 +462,7 @@
   "exporting": "正在导出，请稍等...",
   "exported": "导出完成",
   "refExpired": "不存在符合条件的内容块",
-  "emptyContent": "暂无相关内容",
+  "emptyContent": "未找到相关内容",
   "useBrowserView": "在浏览器中查看",
   "userLocalPDF": "使用本地 PDF 工具打开",
   "copyID": "复制 ID",
@@ -611,7 +610,7 @@
   "max": "最大化",
   "md2": "代码块连字",
   "md3": "启用后代码块将显示连字",
-  "md4": "自动进行段首缩进，以符合传统中文排版习惯",
+  "md4": "启用后自动进行段首缩进，以符合传统中文排版习惯",
   "md7": "是否显示网络图片角标",
   "md8": "启用后如果图片是网络文件（非本地资源文件）则会显示角标",
   "md9": "虚拟引用关键字包含列表",
@@ -657,9 +656,11 @@
   "export15": "标签包裹符号",
   "export16": "请依次在输入框中填写标签左侧符号和标签右侧符号",
   "export17": "添加文档标题",
-  "export18": "将文档标题以一级标题的形式插入到开头",
+  "export18": "启用后将文档标题以一级标题的形式插入到开头",
   "export19": "Pandoc 可执行文件路径",
   "export20": "导出 Word .docx 文件需要使用 <a href=\"https://pandoc.org\" target=\"_blank\">Pandoc</a> 进行格式转换",
+  "export21": "导出 PDF 添加页脚",
+  "export22": "启用后在导出的 PDF 页脚处添加 <code class='fn__code'>由思源笔记导出</code>",
   "blockRef": "引用块",
   "theme11": "明亮模式下使用主题",
   "theme12": "暗黑模式下使用主题",
@@ -843,6 +844,16 @@
     "xy": "%d 年%s",
     "max": "很久%s"
   },
+  "_trayMenu": {
+    "showWindow": "显示主窗口",
+    "hideWindow": "隐藏主窗口",
+    "setWindowTop": "窗口置顶",
+    "cancelWindowTop": "取消窗口置顶",
+    "officialWebsite": "访问官方网站",
+    "openSource": "访问 GitHub 项目",
+    "resetWindow": "重置窗口并退出程序",
+    "quit": "退出程序"
+  },
   "_kernel": {
     "0": "查询笔记本失败",
     "1": "文件名重复",
@@ -1022,6 +1033,7 @@
     "175": "请输入验证码",
     "176": "思源笔记",
     "177": "退出应用",
-    "178": "访问授权 - 思源笔记"
+    "178": "访问授权 - 思源笔记",
+    "179": "磁盘空间可能不足，建议保持工作空间所在磁盘可用空间为 data 大小的 2 倍以上"
   }
 }
